--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy React Portfolio to GitHub Pages
 on:
   push:
     branches:
-      - main   # change to master if your repo uses master
+      - main
 
 permissions:
   contents: write
@@ -31,4 +31,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./dist   # ✅ VITE OUTPUT
+
